3º ano/1º Semestre/plc/trabalho/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASPAS
    DEFINIR
    NAO
    RETORNAR

Grammar

Rule 0     S' -> ProgramaInit
Rule 1     ProgramaInit -> Programa
Rule 2     Programa -> Declaracoes Corpo
Rule 3     Corpo -> Processo NovaLinha
Rule 4     Corpo -> Corpo Processo NovaLinha
Rule 5     Corpo -> NovaLinha
Rule 6     NovaLinha -> NOVALINHA
Rule 7     Declaracoes -> Declaracao NovaLinha
Rule 8     Declaracoes -> Declaracoes Declaracao NovaLinha
Rule 9     Declaracao -> INTEIRO ID
Rule 10    Declaracao -> INTEIRO ID IGUAL NUMERO
Rule 11    Declaracao -> INTEIRO ID IGUAL Entrada
Rule 12    Processo -> If
Rule 13    Processo -> Ciclo
Rule 14    Processo -> Atributo
Rule 15    Processo -> Imprimir
Rule 16    Entrada -> ENTRADA ABREPARENTESES Texto FECHAPARENTESES
Rule 17    Imprimir -> IMPRIMIR ABREPARENTESES Argumento FECHAPARENTESES
Rule 18    Argumento -> Texto
Rule 19    Argumento -> Expressao
Rule 20    Texto -> " CITACAO "
Rule 21    If -> SE ABREPARENTESES Cond FECHAPARENTESES : Corpo
Rule 22    If -> SE ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo
Rule 23    Ciclo -> FACA : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
Rule 24    Ciclo -> ENQUANTO ABREPARENTESES Cond FECHAPARENTESES : Corpo
Rule 25    Atributo -> ID IGUAL Expressao
Rule 26    Atributo -> ID IGUAL Entrada
Rule 27    Expressao -> ID
Rule 28    Expressao -> NUMERO
Rule 29    Expressao -> Expressao ADICAO Expressao
Rule 30    Expressao -> Expressao SUBTRACAO Expressao
Rule 31    Expressao -> Expressao MULTIPLICACAO Expressao
Rule 32    Expressao -> Expressao DIVISAO Expressao
Rule 33    Expressao -> Expressao RESTO Expressao
Rule 34    Cond -> Expressao Operadores Expressao
Rule 35    Cond -> Cond Operadores Cond
Rule 36    Operadores -> IGUAL
Rule 37    Operadores -> EQUIVALENTE
Rule 38    Operadores -> MAIOR
Rule 39    Operadores -> MENOR
Rule 40    Operadores -> MAIORIGUAL
Rule 41    Operadores -> MENORIGUAL
Rule 42    Operadores -> DIFERENTE
Rule 43    Operadores -> E
Rule 44    Operadores -> OU

Terminals, with rules where they appear

"                    : 20 20
:                    : 21 22 22 23 24
ABREPARENTESES       : 16 17 21 22 23 24
ADICAO               : 29
ASPAS                : 
CITACAO              : 20
DEFINIR              : 
DIFERENTE            : 42
DIVISAO              : 32
E                    : 43
ENQUANTO             : 23 24
ENTRADA              : 16
EQUIVALENTE          : 37
FACA                 : 23
FECHAPARENTESES      : 16 17 21 22 23 24
ID                   : 9 10 11 25 26 27
IGUAL                : 10 11 25 26 36
IMPRIMIR             : 17
INTEIRO              : 9 10 11
MAIOR                : 38
MAIORIGUAL           : 40
MENOR                : 39
MENORIGUAL           : 41
MULTIPLICACAO        : 31
NAO                  : 
NOVALINHA            : 6
NUMERO               : 10 28
OU                   : 44
RESTO                : 33
RETORNAR             : 
SE                   : 21 22
SENAO                : 22
SUBTRACAO            : 30
error                : 

Nonterminals, with rules where they appear

Argumento            : 17
Atributo             : 14
Ciclo                : 13
Cond                 : 21 22 23 24 35 35
Corpo                : 2 4 21 22 22 23 24
Declaracao           : 7 8
Declaracoes          : 2 8
Entrada              : 11 26
Expressao            : 19 25 29 29 30 30 31 31 32 32 33 33 34 34
If                   : 12
Imprimir             : 15
NovaLinha            : 3 4 5 7 8
Operadores           : 34 35
Processo             : 3 4
Programa             : 1
ProgramaInit         : 0
Texto                : 16 18

Parsing method: LALR

state 0

    (0) S' -> . ProgramaInit
    (1) ProgramaInit -> . Programa
    (2) Programa -> . Declaracoes Corpo
    (7) Declaracoes -> . Declaracao NovaLinha
    (8) Declaracoes -> . Declaracoes Declaracao NovaLinha
    (9) Declaracao -> . INTEIRO ID
    (10) Declaracao -> . INTEIRO ID IGUAL NUMERO
    (11) Declaracao -> . INTEIRO ID IGUAL Entrada

    INTEIRO         shift and go to state 5

    ProgramaInit                   shift and go to state 1
    Programa                       shift and go to state 2
    Declaracoes                    shift and go to state 3
    Declaracao                     shift and go to state 4

state 1

    (0) S' -> ProgramaInit .



state 2

    (1) ProgramaInit -> Programa .

    $end            reduce using rule 1 (ProgramaInit -> Programa .)


state 3

    (2) Programa -> Declaracoes . Corpo
    (8) Declaracoes -> Declaracoes . Declaracao NovaLinha
    (3) Corpo -> . Processo NovaLinha
    (4) Corpo -> . Corpo Processo NovaLinha
    (5) Corpo -> . NovaLinha
    (9) Declaracao -> . INTEIRO ID
    (10) Declaracao -> . INTEIRO ID IGUAL NUMERO
    (11) Declaracao -> . INTEIRO ID IGUAL Entrada
    (12) Processo -> . If
    (13) Processo -> . Ciclo
    (14) Processo -> . Atributo
    (15) Processo -> . Imprimir
    (6) NovaLinha -> . NOVALINHA
    (21) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (22) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo
    (23) Ciclo -> . FACA : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (24) Ciclo -> . ENQUANTO ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (25) Atributo -> . ID IGUAL Expressao
    (26) Atributo -> . ID IGUAL Entrada
    (17) Imprimir -> . IMPRIMIR ABREPARENTESES Argumento FECHAPARENTESES

    INTEIRO         shift and go to state 5
    NOVALINHA       shift and go to state 15
    SE              shift and go to state 16
    FACA            shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 10
    IMPRIMIR        shift and go to state 19

    Corpo                          shift and go to state 6
    Declaracao                     shift and go to state 7
    NovaLinha                      shift and go to state 8
    Processo                       shift and go to state 9
    If                             shift and go to state 11
    Ciclo                          shift and go to state 12
    Atributo                       shift and go to state 13
    Imprimir                       shift and go to state 14

state 4

    (7) Declaracoes -> Declaracao . NovaLinha
    (6) NovaLinha -> . NOVALINHA

    NOVALINHA       shift and go to state 15

    NovaLinha                      shift and go to state 20

state 5

    (9) Declaracao -> INTEIRO . ID
    (10) Declaracao -> INTEIRO . ID IGUAL NUMERO
    (11) Declaracao -> INTEIRO . ID IGUAL Entrada

    ID              shift and go to state 21


state 6

    (2) Programa -> Declaracoes Corpo .
    (4) Corpo -> Corpo . Processo NovaLinha
    (12) Processo -> . If
    (13) Processo -> . Ciclo
    (14) Processo -> . Atributo
    (15) Processo -> . Imprimir
    (21) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (22) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo
    (23) Ciclo -> . FACA : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (24) Ciclo -> . ENQUANTO ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (25) Atributo -> . ID IGUAL Expressao
    (26) Atributo -> . ID IGUAL Entrada
    (17) Imprimir -> . IMPRIMIR ABREPARENTESES Argumento FECHAPARENTESES

    $end            reduce using rule 2 (Programa -> Declaracoes Corpo .)
    SE              shift and go to state 16
    FACA            shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 10
    IMPRIMIR        shift and go to state 19

    Processo                       shift and go to state 22
    If                             shift and go to state 11
    Ciclo                          shift and go to state 12
    Atributo                       shift and go to state 13
    Imprimir                       shift and go to state 14

state 7

    (8) Declaracoes -> Declaracoes Declaracao . NovaLinha
    (6) NovaLinha -> . NOVALINHA

    NOVALINHA       shift and go to state 15

    NovaLinha                      shift and go to state 23

state 8

    (5) Corpo -> NovaLinha .

    SE              reduce using rule 5 (Corpo -> NovaLinha .)
    FACA            reduce using rule 5 (Corpo -> NovaLinha .)
    ENQUANTO        reduce using rule 5 (Corpo -> NovaLinha .)
    ID              reduce using rule 5 (Corpo -> NovaLinha .)
    IMPRIMIR        reduce using rule 5 (Corpo -> NovaLinha .)
    $end            reduce using rule 5 (Corpo -> NovaLinha .)
    SENAO           reduce using rule 5 (Corpo -> NovaLinha .)
    NOVALINHA       reduce using rule 5 (Corpo -> NovaLinha .)


state 9

    (3) Corpo -> Processo . NovaLinha
    (6) NovaLinha -> . NOVALINHA

    NOVALINHA       shift and go to state 15

    NovaLinha                      shift and go to state 24

state 10

    (25) Atributo -> ID . IGUAL Expressao
    (26) Atributo -> ID . IGUAL Entrada

    IGUAL           shift and go to state 25


state 11

    (12) Processo -> If .

    NOVALINHA       reduce using rule 12 (Processo -> If .)


state 12

    (13) Processo -> Ciclo .

    NOVALINHA       reduce using rule 13 (Processo -> Ciclo .)


state 13

    (14) Processo -> Atributo .

    NOVALINHA       reduce using rule 14 (Processo -> Atributo .)


state 14

    (15) Processo -> Imprimir .

    NOVALINHA       reduce using rule 15 (Processo -> Imprimir .)


state 15

    (6) NovaLinha -> NOVALINHA .

    SE              reduce using rule 6 (NovaLinha -> NOVALINHA .)
    FACA            reduce using rule 6 (NovaLinha -> NOVALINHA .)
    ENQUANTO        reduce using rule 6 (NovaLinha -> NOVALINHA .)
    ID              reduce using rule 6 (NovaLinha -> NOVALINHA .)
    IMPRIMIR        reduce using rule 6 (NovaLinha -> NOVALINHA .)
    $end            reduce using rule 6 (NovaLinha -> NOVALINHA .)
    INTEIRO         reduce using rule 6 (NovaLinha -> NOVALINHA .)
    NOVALINHA       reduce using rule 6 (NovaLinha -> NOVALINHA .)
    SENAO           reduce using rule 6 (NovaLinha -> NOVALINHA .)


state 16

    (21) If -> SE . ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (22) If -> SE . ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo

    ABREPARENTESES  shift and go to state 26


state 17

    (23) Ciclo -> FACA . : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES

    :               shift and go to state 27


state 18

    (24) Ciclo -> ENQUANTO . ABREPARENTESES Cond FECHAPARENTESES : Corpo

    ABREPARENTESES  shift and go to state 28


state 19

    (17) Imprimir -> IMPRIMIR . ABREPARENTESES Argumento FECHAPARENTESES

    ABREPARENTESES  shift and go to state 29


state 20

    (7) Declaracoes -> Declaracao NovaLinha .

    INTEIRO         reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    NOVALINHA       reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    SE              reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    FACA            reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    ENQUANTO        reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    ID              reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)
    IMPRIMIR        reduce using rule 7 (Declaracoes -> Declaracao NovaLinha .)


state 21

    (9) Declaracao -> INTEIRO ID .
    (10) Declaracao -> INTEIRO ID . IGUAL NUMERO
    (11) Declaracao -> INTEIRO ID . IGUAL Entrada

    NOVALINHA       reduce using rule 9 (Declaracao -> INTEIRO ID .)
    IGUAL           shift and go to state 30


state 22

    (4) Corpo -> Corpo Processo . NovaLinha
    (6) NovaLinha -> . NOVALINHA

    NOVALINHA       shift and go to state 15

    NovaLinha                      shift and go to state 31

state 23

    (8) Declaracoes -> Declaracoes Declaracao NovaLinha .

    INTEIRO         reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    NOVALINHA       reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    SE              reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    FACA            reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    ENQUANTO        reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    ID              reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)
    IMPRIMIR        reduce using rule 8 (Declaracoes -> Declaracoes Declaracao NovaLinha .)


state 24

    (3) Corpo -> Processo NovaLinha .

    SE              reduce using rule 3 (Corpo -> Processo NovaLinha .)
    FACA            reduce using rule 3 (Corpo -> Processo NovaLinha .)
    ENQUANTO        reduce using rule 3 (Corpo -> Processo NovaLinha .)
    ID              reduce using rule 3 (Corpo -> Processo NovaLinha .)
    IMPRIMIR        reduce using rule 3 (Corpo -> Processo NovaLinha .)
    $end            reduce using rule 3 (Corpo -> Processo NovaLinha .)
    SENAO           reduce using rule 3 (Corpo -> Processo NovaLinha .)
    NOVALINHA       reduce using rule 3 (Corpo -> Processo NovaLinha .)


state 25

    (25) Atributo -> ID IGUAL . Expressao
    (26) Atributo -> ID IGUAL . Entrada
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao
    (16) Entrada -> . ENTRADA ABREPARENTESES Texto FECHAPARENTESES

    ID              shift and go to state 32
    NUMERO          shift and go to state 35
    ENTRADA         shift and go to state 36

    Expressao                      shift and go to state 33
    Entrada                        shift and go to state 34

state 26

    (21) If -> SE ABREPARENTESES . Cond FECHAPARENTESES : Corpo
    (22) If -> SE ABREPARENTESES . Cond FECHAPARENTESES : Corpo SENAO : Corpo
    (34) Cond -> . Expressao Operadores Expressao
    (35) Cond -> . Cond Operadores Cond
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Cond                           shift and go to state 37
    Expressao                      shift and go to state 38

state 27

    (23) Ciclo -> FACA : . Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (3) Corpo -> . Processo NovaLinha
    (4) Corpo -> . Corpo Processo NovaLinha
    (5) Corpo -> . NovaLinha
    (12) Processo -> . If
    (13) Processo -> . Ciclo
    (14) Processo -> . Atributo
    (15) Processo -> . Imprimir
    (6) NovaLinha -> . NOVALINHA
    (21) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (22) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo
    (23) Ciclo -> . FACA : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (24) Ciclo -> . ENQUANTO ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (25) Atributo -> . ID IGUAL Expressao
    (26) Atributo -> . ID IGUAL Entrada
    (17) Imprimir -> . IMPRIMIR ABREPARENTESES Argumento FECHAPARENTESES

    NOVALINHA       shift and go to state 15
    SE              shift and go to state 16
    FACA            shift and go to state 17
    ENQUANTO        shift and go to state 18
    ID              shift and go to state 10
    IMPRIMIR        shift and go to state 19

    Corpo                          shift and go to state 39
    Processo                       shift and go to state 9
    NovaLinha                      shift and go to state 8
    If                             shift and go to state 11
    Ciclo                          shift and go to state 12
    Atributo                       shift and go to state 13
    Imprimir                       shift and go to state 14

state 28

    (24) Ciclo -> ENQUANTO ABREPARENTESES . Cond FECHAPARENTESES : Corpo
    (34) Cond -> . Expressao Operadores Expressao
    (35) Cond -> . Cond Operadores Cond
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Cond                           shift and go to state 40
    Expressao                      shift and go to state 38

state 29

    (17) Imprimir -> IMPRIMIR ABREPARENTESES . Argumento FECHAPARENTESES
    (18) Argumento -> . Texto
    (19) Argumento -> . Expressao
    (20) Texto -> . " CITACAO "
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    "               shift and go to state 44
    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Argumento                      shift and go to state 41
    Texto                          shift and go to state 42
    Expressao                      shift and go to state 43

state 30

    (10) Declaracao -> INTEIRO ID IGUAL . NUMERO
    (11) Declaracao -> INTEIRO ID IGUAL . Entrada
    (16) Entrada -> . ENTRADA ABREPARENTESES Texto FECHAPARENTESES

    NUMERO          shift and go to state 45
    ENTRADA         shift and go to state 36

    Entrada                        shift and go to state 46

state 31

    (4) Corpo -> Corpo Processo NovaLinha .

    SE              reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    FACA            reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    ENQUANTO        reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    ID              reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    IMPRIMIR        reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    $end            reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    SENAO           reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)
    NOVALINHA       reduce using rule 4 (Corpo -> Corpo Processo NovaLinha .)


state 32

    (27) Expressao -> ID .

    ADICAO          reduce using rule 27 (Expressao -> ID .)
    SUBTRACAO       reduce using rule 27 (Expressao -> ID .)
    MULTIPLICACAO   reduce using rule 27 (Expressao -> ID .)
    DIVISAO         reduce using rule 27 (Expressao -> ID .)
    RESTO           reduce using rule 27 (Expressao -> ID .)
    NOVALINHA       reduce using rule 27 (Expressao -> ID .)
    IGUAL           reduce using rule 27 (Expressao -> ID .)
    EQUIVALENTE     reduce using rule 27 (Expressao -> ID .)
    MAIOR           reduce using rule 27 (Expressao -> ID .)
    MENOR           reduce using rule 27 (Expressao -> ID .)
    MAIORIGUAL      reduce using rule 27 (Expressao -> ID .)
    MENORIGUAL      reduce using rule 27 (Expressao -> ID .)
    DIFERENTE       reduce using rule 27 (Expressao -> ID .)
    E               reduce using rule 27 (Expressao -> ID .)
    OU              reduce using rule 27 (Expressao -> ID .)
    FECHAPARENTESES reduce using rule 27 (Expressao -> ID .)


state 33

    (25) Atributo -> ID IGUAL Expressao .
    (29) Expressao -> Expressao . ADICAO Expressao
    (30) Expressao -> Expressao . SUBTRACAO Expressao
    (31) Expressao -> Expressao . MULTIPLICACAO Expressao
    (32) Expressao -> Expressao . DIVISAO Expressao
    (33) Expressao -> Expressao . RESTO Expressao

    NOVALINHA       reduce using rule 25 (Atributo -> ID IGUAL Expressao .)
    ADICAO          shift and go to state 47
    SUBTRACAO       shift and go to state 48
    MULTIPLICACAO   shift and go to state 49
    DIVISAO         shift and go to state 50
    RESTO           shift and go to state 51


state 34

    (26) Atributo -> ID IGUAL Entrada .

    NOVALINHA       reduce using rule 26 (Atributo -> ID IGUAL Entrada .)


state 35

    (28) Expressao -> NUMERO .

    ADICAO          reduce using rule 28 (Expressao -> NUMERO .)
    SUBTRACAO       reduce using rule 28 (Expressao -> NUMERO .)
    MULTIPLICACAO   reduce using rule 28 (Expressao -> NUMERO .)
    DIVISAO         reduce using rule 28 (Expressao -> NUMERO .)
    RESTO           reduce using rule 28 (Expressao -> NUMERO .)
    NOVALINHA       reduce using rule 28 (Expressao -> NUMERO .)
    IGUAL           reduce using rule 28 (Expressao -> NUMERO .)
    EQUIVALENTE     reduce using rule 28 (Expressao -> NUMERO .)
    MAIOR           reduce using rule 28 (Expressao -> NUMERO .)
    MENOR           reduce using rule 28 (Expressao -> NUMERO .)
    MAIORIGUAL      reduce using rule 28 (Expressao -> NUMERO .)
    MENORIGUAL      reduce using rule 28 (Expressao -> NUMERO .)
    DIFERENTE       reduce using rule 28 (Expressao -> NUMERO .)
    E               reduce using rule 28 (Expressao -> NUMERO .)
    OU              reduce using rule 28 (Expressao -> NUMERO .)
    FECHAPARENTESES reduce using rule 28 (Expressao -> NUMERO .)


state 36

    (16) Entrada -> ENTRADA . ABREPARENTESES Texto FECHAPARENTESES

    ABREPARENTESES  shift and go to state 52


state 37

    (21) If -> SE ABREPARENTESES Cond . FECHAPARENTESES : Corpo
    (22) If -> SE ABREPARENTESES Cond . FECHAPARENTESES : Corpo SENAO : Corpo
    (35) Cond -> Cond . Operadores Cond
    (36) Operadores -> . IGUAL
    (37) Operadores -> . EQUIVALENTE
    (38) Operadores -> . MAIOR
    (39) Operadores -> . MENOR
    (40) Operadores -> . MAIORIGUAL
    (41) Operadores -> . MENORIGUAL
    (42) Operadores -> . DIFERENTE
    (43) Operadores -> . E
    (44) Operadores -> . OU

    FECHAPARENTESES shift and go to state 53
    IGUAL           shift and go to state 55
    EQUIVALENTE     shift and go to state 56
    MAIOR           shift and go to state 57
    MENOR           shift and go to state 58
    MAIORIGUAL      shift and go to state 59
    MENORIGUAL      shift and go to state 60
    DIFERENTE       shift and go to state 61
    E               shift and go to state 62
    OU              shift and go to state 63

    Operadores                     shift and go to state 54

state 38

    (34) Cond -> Expressao . Operadores Expressao
    (29) Expressao -> Expressao . ADICAO Expressao
    (30) Expressao -> Expressao . SUBTRACAO Expressao
    (31) Expressao -> Expressao . MULTIPLICACAO Expressao
    (32) Expressao -> Expressao . DIVISAO Expressao
    (33) Expressao -> Expressao . RESTO Expressao
    (36) Operadores -> . IGUAL
    (37) Operadores -> . EQUIVALENTE
    (38) Operadores -> . MAIOR
    (39) Operadores -> . MENOR
    (40) Operadores -> . MAIORIGUAL
    (41) Operadores -> . MENORIGUAL
    (42) Operadores -> . DIFERENTE
    (43) Operadores -> . E
    (44) Operadores -> . OU

    ADICAO          shift and go to state 47
    SUBTRACAO       shift and go to state 48
    MULTIPLICACAO   shift and go to state 49
    DIVISAO         shift and go to state 50
    RESTO           shift and go to state 51
    IGUAL           shift and go to state 55
    EQUIVALENTE     shift and go to state 56
    MAIOR           shift and go to state 57
    MENOR           shift and go to state 58
    MAIORIGUAL      shift and go to state 59
    MENORIGUAL      shift and go to state 60
    DIFERENTE       shift and go to state 61
    E               shift and go to state 62
    OU              shift and go to state 63

    Operadores                     shift and go to state 64

state 39

    (23) Ciclo -> FACA : Corpo . ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (4) Corpo -> Corpo . Processo NovaLinha
    (12) Processo -> . If
    (13) Processo -> . Ciclo
    (14) Processo -> . Atributo
    (15) Processo -> . Imprimir
    (21) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (22) If -> . SE ABREPARENTESES Cond FECHAPARENTESES : Corpo SENAO : Corpo
    (23) Ciclo -> . FACA : Corpo ENQUANTO ABREPARENTESES Cond FECHAPARENTESES
    (24) Ciclo -> . ENQUANTO ABREPARENTESES Cond FECHAPARENTESES : Corpo
    (25) Atributo -> . ID IGUAL Expressao
    (26) Atributo -> . ID IGUAL Entrada
    (17) Imprimir -> . IMPRIMIR ABREPARENTESES Argumento FECHAPARENTESES

    ENQUANTO        shift and go to state 65
    SE              shift and go to state 16
    FACA            shift and go to state 17
    ID              shift and go to state 10
    IMPRIMIR        shift and go to state 19

    Processo                       shift and go to state 22
    If                             shift and go to state 11
    Ciclo                          shift and go to state 12
    Atributo                       shift and go to state 13
    Imprimir                       shift and go to state 14

state 40

    (24) Ciclo -> ENQUANTO ABREPARENTESES Cond . FECHAPARENTESES : Corpo
    (35) Cond -> Cond . Operadores Cond
    (36) Operadores -> . IGUAL
    (37) Operadores -> . EQUIVALENTE
    (38) Operadores -> . MAIOR
    (39) Operadores -> . MENOR
    (40) Operadores -> . MAIORIGUAL
    (41) Operadores -> . MENORIGUAL
    (42) Operadores -> . DIFERENTE
    (43) Operadores -> . E
    (44) Operadores -> . OU

    FECHAPARENTESES shift and go to state 66
    IGUAL           shift and go to state 55
    EQUIVALENTE     shift and go to state 56
    MAIOR           shift and go to state 57
    MENOR           shift and go to state 58
    MAIORIGUAL      shift and go to state 59
    MENORIGUAL      shift and go to state 60
    DIFERENTE       shift and go to state 61
    E               shift and go to state 62
    OU              shift and go to state 63

    Operadores                     shift and go to state 54

state 41

    (17) Imprimir -> IMPRIMIR ABREPARENTESES Argumento . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 67


state 42

    (18) Argumento -> Texto .

    FECHAPARENTESES reduce using rule 18 (Argumento -> Texto .)


state 43

    (19) Argumento -> Expressao .
    (29) Expressao -> Expressao . ADICAO Expressao
    (30) Expressao -> Expressao . SUBTRACAO Expressao
    (31) Expressao -> Expressao . MULTIPLICACAO Expressao
    (32) Expressao -> Expressao . DIVISAO Expressao
    (33) Expressao -> Expressao . RESTO Expressao

    FECHAPARENTESES reduce using rule 19 (Argumento -> Expressao .)
    ADICAO          shift and go to state 47
    SUBTRACAO       shift and go to state 48
    MULTIPLICACAO   shift and go to state 49
    DIVISAO         shift and go to state 50
    RESTO           shift and go to state 51


state 44

    (20) Texto -> " . CITACAO "

    CITACAO         shift and go to state 68


state 45

    (10) Declaracao -> INTEIRO ID IGUAL NUMERO .

    NOVALINHA       reduce using rule 10 (Declaracao -> INTEIRO ID IGUAL NUMERO .)


state 46

    (11) Declaracao -> INTEIRO ID IGUAL Entrada .

    NOVALINHA       reduce using rule 11 (Declaracao -> INTEIRO ID IGUAL Entrada .)


state 47

    (29) Expressao -> Expressao ADICAO . Expressao
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Expressao                      shift and go to state 69

state 48

    (30) Expressao -> Expressao SUBTRACAO . Expressao
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Expressao                      shift and go to state 70

state 49

    (31) Expressao -> Expressao MULTIPLICACAO . Expressao
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Expressao                      shift and go to state 71

state 50

    (32) Expressao -> Expressao DIVISAO . Expressao
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Expressao                      shift and go to state 72

state 51

    (33) Expressao -> Expressao RESTO . Expressao
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Expressao                      shift and go to state 73

state 52

    (16) Entrada -> ENTRADA ABREPARENTESES . Texto FECHAPARENTESES
    (20) Texto -> . " CITACAO "

    "               shift and go to state 44

    Texto                          shift and go to state 74

state 53

    (21) If -> SE ABREPARENTESES Cond FECHAPARENTESES . : Corpo
    (22) If -> SE ABREPARENTESES Cond FECHAPARENTESES . : Corpo SENAO : Corpo

    :               shift and go to state 75


state 54

    (35) Cond -> Cond Operadores . Cond
    (34) Cond -> . Expressao Operadores Expressao
    (35) Cond -> . Cond Operadores Cond
    (27) Expressao -> . ID
    (28) Expressao -> . NUMERO
    (29) Expressao -> . Expressao ADICAO Expressao
    (30) Expressao -> . Expressao SUBTRACAO Expressao
    (31) Expressao -> . Expressao MULTIPLICACAO Expressao
    (32) Expressao -> . Expressao DIVISAO Expressao
    (33) Expressao -> . Expressao RESTO Expressao

    ID              shift and go to state 32
    NUMERO          shift and go to state 35

    Cond                           shift and go to state 76
    Expressao                      shift and go to state 38

state 55

    (36) Operadores -> IGUAL .
